fix for loading model

--- a/modules/layout/inference/helm_chart/templates/deployment.yaml
+++ b/modules/layout/inference/helm_chart/templates/deployment.yaml
@@ -77,7 +77,8 @@ spec:
                 - /bin/sh
                 - -c
                 - ps aux | grep 'document.celery_process.app' | grep -v grep || exit 1
-            initialDelaySeconds: 30
+            initialDelaySeconds: 60
+            failureThreshold: 10
             periodSeconds: 30
           readinessProbe:
             exec:
@@ -85,7 +86,7 @@ spec:
                 - /bin/sh
                 - -c
                 - ps aux | grep 'document.celery_process.app' | grep -v grep || exit 1
-            initialDelaySeconds: 10
+            initialDelaySeconds: 60
             periodSeconds: 30
           resources:
             limits:
