--- a/modules/layout/inference/helm_chart/templates/deployment.yaml
+++ b/modules/layout/inference/helm_chart/templates/deployment.yaml
@@ -64,11 +64,14 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
           workingDir: /app
+          # LOAD_MODEL=yes && LOCAL=0 && export PYTHONPATH=/app && celery -A document.celery_process.app worker -n layout-w1 --loglevel=INFO --concurrency=1 --queues=layout_queue
           command:
             - /bin/sh
             - -c
+            #- |
+            #  export PYTHONPATH=/app && while true; do sleep 30; done
             - |
-              export PYTHONPATH=/app && supervisord -c /app/supervisord.conf
+              export PYTHONPATH=/app && python init-layout.py && supervisord -c /app/supervisord.conf
           securityContext:
             runAsUser: {{ .Values.securityContext.runAsUser }}
           livenessProbe:
