--- a/modules/ranker/inference/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/inference/helm_chart/templates/deployment.yaml
@@ -72,7 +72,7 @@ spec:
               command:
                 - /bin/sh
                 - -c
-                - ps aux | grep 'search.celery.appSearch' | grep -v grep || exit 1
+                - ps aux | grep 'ranker.celery.appSearch' | grep -v grep || exit 1
             initialDelaySeconds: 60
             failureThreshold: 10
             periodSeconds: 30
@@ -81,7 +81,7 @@ spec:
               command:
                 - /bin/sh
                 - -c
-                - ps aux | grep 'search.celery.appSearch' | grep -v grep || exit 1
+                - ps aux | grep 'ranker.celery.appSearch' | grep -v grep || exit 1
             initialDelaySeconds: 60
             periodSeconds: 30
           resources:
