--- a/modules/summary/inference/helm_chart/templates/deployment.yaml
+++ b/modules/summary/inference/helm_chart/templates/deployment.yaml
@@ -53,6 +53,7 @@ spec:
             - name: host-usr-bin
               mountPath: /host-usr-bin
         {{- end }}
+        {{- if not .Values.local }}
         - name: update-permissions
           image: {{ .Values.busybox.repository }}:{{ .Values.busybox.tag }}
           imagePullPolicy: "{{ .Values.busybox.pull }}"
@@ -118,6 +119,7 @@ spec:
           volumeMounts:
             - name: model-volume
               mountPath: /workspace/hf_models_cache
+        {{- end }}
       containers:
         - name: {{ .Values.service.name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -150,6 +152,7 @@ spec:
             initialDelaySeconds: 180
             failureThreshold: 20
             periodSeconds: 15
+          {{- if not .Values.local }}
           resources:
             limits:
               cpu: "{{ .Values.resources.limits.cpu }}"
@@ -157,6 +160,7 @@ spec:
             requests:
               cpu: "{{ .Values.resources.requests.cpu }}"
               memory: "{{ .Values.resources.requests.memory }}"
+          {{- end }}
           volumeMounts:
             - name: config-models
               mountPath: /workspace/config_models.py
@@ -167,8 +171,10 @@ spec:
             - name: supervisord-volume
               mountPath: /workspace/supervisord.conf
               subPath: supervisord.conf
+            {{- if not .Values.local }}
             - name: model-volume
               mountPath: /workspace/hf_models_cache
+            {{- end }}
       volumes:
         - name: config-models
           configMap:
@@ -184,7 +190,6 @@ spec:
           configMap:
             name: ldconfig-symlink-map
             defaultMode: 0555
-        {{- end }}
         - name: host-sbin
           hostPath:
             path: /sbin
@@ -201,6 +206,9 @@ spec:
           hostPath:
             path: /usr/bin
             type: Directory
+        {{- end }}
+        {{- if not .Values.local }}
         - name: model-volume
           persistentVolumeClaim:
             claimName: {{ .Values.pv.name }}
+        {{- end }}
