--- a/modules/layout-webhook/helm_chart/templates/deployment.yaml
+++ b/modules/layout-webhook/helm_chart/templates/deployment.yaml
@@ -48,6 +48,7 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 30
+        {{- if not .Values.local }}
         resources:
           limits:
             cpu: "{{ .Values.resources.limits.cpu }}"
@@ -55,6 +56,7 @@ spec:
           requests:
             cpu: "{{ .Values.resources.requests.cpu }}"
             memory: "{{ .Values.resources.requests.memory }}"
+        {{- end }}
         volumeMounts:
         - name: config-volume
           mountPath: /home/golang/.cashbot/config.yaml
