--- a/modules/layout/inference/helm_chart/templates/deployment.yaml
+++ b/modules/layout/inference/helm_chart/templates/deployment.yaml
@@ -37,7 +37,6 @@ spec:
           imagePullPolicy: "{{ .Values.busybox.pull }}"
           command: ["/bin/sh", "-c", "--"]
           args: ["echo 'Running ldconfig_symlink.sh on this node'; /scripts/ldconfig_symlink.sh"]
-        {{- end }}
           securityContext:
             privileged: true
           resources:
@@ -45,11 +44,9 @@ spec:
               cpu: 10m
               memory: 50Mi
           volumeMounts:
-            {{- if .Values.createSymlink }}
             - name: {{ .Values.service.name }}
               mountPath: /scripts/ldconfig_symlink.sh
               subPath: ldconfig_symlink.sh
-            {{- end }}
             - name: host-sbin
               mountPath: /host-sbin
             - name: host-usr-sbin
@@ -58,6 +55,7 @@ spec:
               mountPath: /host-bin
             - name: host-usr-bin
               mountPath: /host-usr-bin
+        {{- end }}
       containers:
         - name: {{ .Values.service.name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -86,6 +84,7 @@ spec:
             httpGet:
               path: /health
               port: 8080
+          {{- if not .Values.local }}
           resources:
             limits:
               cpu: "{{ .Values.resources.limits.cpu }}"
@@ -95,6 +94,7 @@ spec:
               cpu: "{{ .Values.resources.requests.cpu }}"
               memory: "{{ .Values.resources.requests.memory }}"
               nvidia.com/gpu: {{ .Values.resources.requests.gpu }}
+          {{- end }}
           volumeMounts:
             - name: config-models
               mountPath: /app/config_models.py
@@ -120,7 +120,6 @@ spec:
           configMap:
             name: ldconfig-symlink-map
             defaultMode: 0555
-        {{- end }}
         - name: host-sbin
           hostPath:
             path: /sbin
@@ -137,3 +136,4 @@ spec:
           hostPath:
             path: /usr/bin
             type: Directory
+        {{- end }}
