--- a/modules/layout/process/helm_chart/templates/deployment.yaml
+++ b/modules/layout/process/helm_chart/templates/deployment.yaml
@@ -63,6 +63,7 @@ spec:
             - ps aux | grep 'document.celery_process.app' | grep -v grep || exit 1
           initialDelaySeconds: 10
           periodSeconds: 30
+        {{- if not .Values.local }}
         resources:
           limits:
             cpu: "{{ .Values.resources.limits.cpu }}"
@@ -70,6 +71,7 @@ spec:
           requests:
             cpu: "{{ .Values.resources.requests.cpu }}"
             memory: "{{ .Values.resources.requests.memory }}"
+        {{- end }}
         volumeMounts:
         - name: config-volume
           mountPath: /app/config.py
