--- a/modules/ranker/api/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/api/helm_chart/templates/deployment.yaml
@@ -54,6 +54,7 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 30
+        {{- if not .Values.local }}
         resources:
           limits:
             cpu: "{{ .Values.resources.limits.cpu }}"
@@ -61,6 +62,7 @@ spec:
           requests:
             cpu: "{{ .Values.resources.requests.cpu }}"
             memory: "{{ .Values.resources.requests.memory }}"
+        {{- end }}
         volumeMounts:
         - name: config-volume
           mountPath: /app/config.py
