--- a/modules/summary/api/helm_chart/templates/deployment.yaml
+++ b/modules/summary/api/helm_chart/templates/deployment.yaml
@@ -55,6 +55,7 @@ spec:
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 15
+        {{- if not .Values.local }}
         resources:
           limits:
             cpu: "{{ .Values.resources.limits.cpu }}"
@@ -62,6 +63,7 @@ spec:
           requests:
             cpu: "{{ .Values.resources.requests.cpu }}"
             memory: "{{ .Values.resources.requests.memory }}"
+        {{- end }}
         volumeMounts:
         - name: config-volume
           mountPath: /app/config.py
