change nodeSelector from node to node_pool

--- a/modules/layout/api/helm_chart/templates/deployment.yaml
+++ b/modules/layout/api/helm_chart/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: {{ .Values.service.name }}
     spec:
       nodeSelector: 
-        node: "{{ .Values.nodeSelector.node }}"
+        node_pool: "{{ .Values.nodeSelector.node }}"
       tolerations:
         - key: "node"
           value: "{{ .Values.nodeSelector.node }}"
