--- a/modules/layout/inference/helm_chart/templates/deployment.yaml
+++ b/modules/layout/inference/helm_chart/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: {{ .Values.service.name }}
     spec:
       nodeSelector:
-        node: "{{ .Values.nodeSelector.node }}"
+        node_pool: "{{ .Values.nodeSelector.node }}"
       runtimeClassName: nvidia
       tolerations:
         - key: "node"
