--- a/modules/summary/inference/test/templates/deployment.yaml
+++ b/modules/summary/inference/test/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       nodeSelector:
         node: "{{ .Values.nodeSelector.node }}"
       tolerations:
-        - key: "node"
+        - key: "node_pool"
           value: "{{ .Values.nodeSelector.node }}"
           effect: "NoSchedule"
       initContainers:
