--- a/modules/ranker/inference/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/inference/helm_chart/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
         node_pool: "{{ .Values.nodeSelector.node }}"
       runtimeClassName: nvidia
       tolerations:
-        - key: "node_pool"
-          value: "{{ .Values.nodeSelector.node }}"
+        - key: "nvidia.com/gpu"
+          value: "present"
           effect: "NoSchedule"
       initContainers:
         - name: wait-for-cache
