--- a/modules/summary/inference/helm_chart/templates/deployment.yaml
+++ b/modules/summary/inference/helm_chart/templates/deployment.yaml
@@ -18,8 +18,8 @@ spec:
       nodeSelector:
         node_pool: "{{ .Values.nodeSelector.node }}"
       tolerations:
-        - key: "node_pool"
-          value: "{{ .Values.nodeSelector.node }}"
+        - key: "nvidia.com/gpu"
+          value: "present"
           effect: "NoSchedule"
       initContainers:
         {{- if .Values.waitForDependencies }}
